--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
 
   </div>
 
-  <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;"></script>
+  <script src="https://api-maps.yandex.ru/2.1/?apikey=d129b13c-50cf-41de-9f1d-9e22f1fd34d6&lang=ru_RU&amp;"></script>
   <script src="js/vendor.min.js"></script>
   <script src="js/main.min.js"></script>
 </body>
